Исправление логики поиска.