@@ -4,6 +4,7 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.jsoup.Jsoup;
 import org.jsoup.nodes.Document;
+import org.jsoup.nodes.Element;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import searchengine.dto.RankDto;
@@ -11,7 +12,7 @@ import searchengine.dto.responses.NotOkResponse;
 import searchengine.dto.responses.SearchDataResponse;
 import searchengine.dto.responses.SearchResponse;
 import searchengine.model.IndexSearch;
-import searchengine.model.Page;
+import searchengine.model.Lemma;
 import searchengine.model.SitePage;
 import searchengine.model.Status;
 import searchengine.repository.IndexSearchRepository;
@@ -23,7 +24,6 @@ import searchengine.services.SearchService;
 
 import java.io.IOException;
 import java.util.*;
-import java.util.concurrent.atomic.AtomicReference;
 import java.util.stream.Collectors;
 
 @Service
@@ -43,13 +43,16 @@ public class SearchServiceImpl implements SearchService {
         if (checkIndexStatusNotIndexed(site)) {
             return ResponseEntity.badRequest().body(new NotOkResponse("Индексация сайта для поиска не закончена"));
         }
-        Integer countPages = pageRepository.getCountPages();
-        log.info("Total pages:" + countPages.toString());
+        //
+        SitePage siteTarget = siteRepository.getSitePageByUrl(site);
+        Integer countPages = siteTarget != null ? pageRepository.getCountPages(siteTarget.getId()) : pageRepository.getCountPages(null);
 
         //Exclusion lemmas by frequent
-        List<String> lemmasForSearch = new ArrayList<>(lemmaService.getLemmasFromText(query).keySet());
+        List<Lemma> lemmasForSearch = lemmaService.getLemmasFromText(query).keySet().stream().map(
+                        it -> lemmaRepository.findLemmasByLemmaAndSiteId(it, siteTarget != null ? siteTarget.getId() : null))
+                .flatMap(Collection::stream).collect(Collectors.toList());
         lemmasForSearch.removeIf(e -> {
-            Integer lemmaFrequency = lemmaRepository.findCountPageByLemma(e);
+            Integer lemmaFrequency = lemmaRepository.findCountPageByLemma(e.getLemma(), e.getSiteId());
             if (lemmaFrequency == null) return true;
             log.info("Lemma frequency(" + e + "):" + lemmaFrequency);
             log.info("Frequency limit:" + (double) lemmaFrequency / countPages);
@@ -57,98 +60,100 @@ public class SearchServiceImpl implements SearchService {
         });
 
         if (lemmasForSearch.isEmpty()) {
-            return ResponseEntity.badRequest().body(new NotOkResponse("Нет ни одного совпадения по заданному поисковому запросу."));
+            return ResponseEntity.ok(Collections.emptyList());
         }
 
         //Sorting lemmas by frequent
-        List<AbstractMap.SimpleEntry<Integer, String>> lemmasFrequencyToSearch = lemmasForSearch.
-                stream().
-                map(l -> new AbstractMap.SimpleEntry<>(lemmaRepository.findCountPageByLemma(l), l)).toList();
-        List<String> sortedLemmasToSearch = lemmasFrequencyToSearch.
-                stream().
+        List<Lemma> sortedLemmasToSearch = lemmasForSearch.stream().
+                map(l -> new AbstractMap.SimpleEntry<>(l.getFrequency(), l)).
                 sorted(Comparator.comparingInt(Map.Entry::getKey)).
-                map(Map.Entry::getValue).
-                toList();
-        log.info(sortedLemmasToSearch.toString());
+                map(Map.Entry::getValue).toList();
+
 
         //Search pages by first lemma
-        List<IndexSearch> resultOfSearch = indexRepository.findIndexesByLemma(lemmaRepository.findIdLemma(sortedLemmasToSearch.get(0)));
+        Map<Integer, IndexSearch> indexesByLemmas = indexRepository.findIndexesByLemma(sortedLemmasToSearch.get(0).getId()).stream().collect(Collectors.toMap(IndexSearch::getPageId, index -> index));
         for (int i = 1; i <= sortedLemmasToSearch.size() - 1; i++) {
-            List<IndexSearch> samePages = new ArrayList<>();
-            List<IndexSearch> pagesNextLemma = indexRepository.findIndexesByLemma(lemmaRepository.findIdLemma(sortedLemmasToSearch.get(i)));
-            List<IndexSearch> finalResultOfSearch = resultOfSearch;
-
-            pagesNextLemma.forEach(index -> {
-                for (IndexSearch res : finalResultOfSearch) {
-                    if (res.getPageId() == index.getPageId()) {
-                        samePages.add(res);
-                        samePages.add(index);
-                    }
+            List<IndexSearch> indexNextLemma = indexRepository.findIndexesByLemma(sortedLemmasToSearch.get(i).getId());
+            List<Integer> pagesToSave = new ArrayList<>();
+            for (IndexSearch indexNext : indexNextLemma) {
+                if (indexesByLemmas.containsKey(indexNext.getPageId())) {
+                    pagesToSave.add(indexNext.getPageId());
                 }
-            });
-            resultOfSearch = samePages;
+            }
+            indexesByLemmas.entrySet().removeIf(entry -> !pagesToSave.contains(entry.getKey()));
         }
 
-        //Output empty result
-        if (resultOfSearch.isEmpty()) {
+        //Output if empty result
+        if (indexesByLemmas.isEmpty()) {
             return ResponseEntity.ok().body(new SearchResponse(true, 0, Collections.emptyList()));
         }
 
         //Rank calculation
         Set<RankDto> pagesRelevance = new HashSet<>();
-        resultOfSearch = resultOfSearch.stream().sorted(Comparator.comparingInt(IndexSearch::getPageId)).collect(Collectors.toList());
-        int pageId = resultOfSearch.get(0).getPageId();
+        int pageId = indexesByLemmas.values().stream().toList().get(0).getPageId();
         RankDto rankPage = new RankDto();
-        for (IndexSearch index : resultOfSearch) {
+        for (IndexSearch index : indexesByLemmas.values()) {
             if (index.getPageId() == pageId) {
-                rankPage.setPageId(index.getPageId());
-                rankPage.setAbsRelevance(rankPage.getAbsRelevance() + index.getLemmaCount());
-                if (rankPage.getMaxLemmaRank() < index.getLemmaCount()) rankPage.setMaxLemmaRank(index.getLemmaCount());
+                rankPage.setPage(index.getPage());
             } else {
                 rankPage.setRelativeRelevance(rankPage.getAbsRelevance() / rankPage.getMaxLemmaRank());
                 pagesRelevance.add(rankPage);
                 rankPage = new RankDto();
+                rankPage.setPage(index.getPage());
                 pageId = index.getPageId();
-                rankPage.setPageId(index.getPageId());
-                rankPage.setAbsRelevance(rankPage.getAbsRelevance() + index.getLemmaCount());
-                if (rankPage.getMaxLemmaRank() < index.getLemmaCount()) rankPage.setMaxLemmaRank(index.getLemmaCount());
             }
+            rankPage.setPageId(index.getPageId());
+            rankPage.setAbsRelevance(rankPage.getAbsRelevance() + index.getLemmaCount());
+            if (rankPage.getMaxLemmaRank() < index.getLemmaCount()) rankPage.setMaxLemmaRank(index.getLemmaCount());
         }
         rankPage.setRelativeRelevance(rankPage.getAbsRelevance() / rankPage.getMaxLemmaRank());
         pagesRelevance.add(rankPage);
 
         //Sort pages Relevance
-        LinkedHashSet<RankDto> pagesRelevanceSorted = pagesRelevance.stream().sorted(Comparator.comparingDouble(RankDto::getRelativeRelevance)).collect(Collectors.toCollection(LinkedHashSet::new));
+        List<RankDto> pagesRelevanceSorted = pagesRelevance.stream().sorted(Comparator.comparingDouble(RankDto::getRelativeRelevance).reversed()).toList();
 
         //Converting pages relevance to searchDataResponses
-        LinkedList<SearchDataResponse> searchDataResponses = new LinkedList<>();
+        List<String> simpleLemmasFromSearch = new ArrayList<>(lemmasForSearch.stream().map(Lemma::getLemma).toList());
+        List<SearchDataResponse> searchDataResponses = new ArrayList<>();
         for (RankDto rank : pagesRelevanceSorted) {
-            AtomicReference<Page> page = new AtomicReference<>(new Page());
-            pageRepository.findById(rank.getPageId()).ifPresent(p -> page.set(new Page(p)));
-            SitePage sitePage = siteRepository.findById(pageRepository.findById(rank.getPageId()).get().getSiteId()).get();
-            Document doc = Jsoup.parse(page.get().getContent());
-
-            searchDataResponses.add(new SearchDataResponse(
-                    sitePage.getUrl(),
-                    sitePage.getName(),
-                    page.get().getPath(),
-                    doc.title(),
-                    getSnipped(doc),
-                    rank.getRelativeRelevance()
-            ));
+            Document doc = Jsoup.parse(rank.getPage().getContent());
+            List<String> sentences = doc.body().getElementsMatchingOwnText("[\\p{IsCyrillic}]").stream().map(Element::text).toList();
+            for (String sentence : sentences) {
+                StringBuilder textFromElement = new StringBuilder(sentence);
+                List<String> words = List.of(sentence.split("[\s:punct]"));
+                int searchWords = 0;
+                for (String word : words) {
+                    String lemmaFromWord = lemmaService.getLemmaByWord(word.replaceAll("\\p{Punct}", ""));
+                    if (simpleLemmasFromSearch.contains(lemmaFromWord)) {
+                        markWord(textFromElement, word, 0);
+                        searchWords += 1;
+                    }
+                }
+                if (searchWords != 0) {
+                    SitePage sitePage = siteRepository.findById(pageRepository.findById(rank.getPageId()).get().getSiteId()).get();
+                    searchDataResponses.add(new SearchDataResponse(
+                            sitePage.getUrl(),
+                            sitePage.getName(),
+                            rank.getPage().getPath(),
+                            doc.title(),
+                            textFromElement.toString(),
+                            rank.getRelativeRelevance(),
+                            searchWords
+                    ));
+                }
+            }
         }
-
-        return ResponseEntity.ok(searchDataResponses);
-    }
-
-    private String getSnipped(Document doc) {
-        //todo достать все тексты из тегов,
-        // каждый пропустить через лемматизатор,
-        // сравнить запрос пользователя и леммы из текста,
-        // если все совпало - вывести
-
-
-        return "SNIPPET";
+        List<SearchDataResponse> sortedSearchDataResponse = searchDataResponses.stream().sorted(Comparator.comparingDouble(SearchDataResponse::getRelevance).reversed()).toList();
+        List<SearchDataResponse> result = new ArrayList<>();
+        for (int i = limit * offset; i <= limit * offset + limit; i++) {
+            try {
+                result.add(sortedSearchDataResponse.get(i));
+            } catch (IndexOutOfBoundsException ex) {
+                break;
+            }
+        }
+        result = result.stream().sorted(Comparator.comparingInt(SearchDataResponse::getWordsFound).reversed()).toList();
+        return ResponseEntity.ok(result);
     }
 
     private Boolean checkIndexStatusNotIndexed(String site) {
@@ -157,5 +162,18 @@ public class SearchServiceImpl implements SearchService {
             return sites.stream().anyMatch(s -> !s.getStatus().equals(indexSuccessStatus));
         }
         return !siteRepository.getSitePageByUrl(site).getStatus().equals(indexSuccessStatus);
+    }
+
+    private void markWord(StringBuilder textFromElement, String word, int startPosition) {
+        int start = textFromElement.indexOf(word, startPosition);
+        if (textFromElement.indexOf("<b>", start - 3) == (start - 3)) {
+            markWord(textFromElement, word, start + word.length());
+            return;
+        }
+        int end = start + word.length();
+        textFromElement.insert(start, "<b>");
+        if (end == -1) {
+            textFromElement.insert(textFromElement.length(), "</b>");
+        } else textFromElement.insert(end + 3, "</b>");
     }
 }
